# goit-pythonweb-hw-08

./: .gitignore  example.env  main.py  main.py~  pyproject.toml
src/conf/: config.py
src/controlllers/: contacts_controllers.py  contacts_controllers.py~
src/models/: models_contacts.py  models_contacts.py~
src/routers/: contacts_routes.py  contacts_routes.py~
src/schemas/: contact_schemas.py~
src/services/: contacts_services.py  contacts_services.py~
